Thu Sep 28 09:01:12 BST 2006  Olly Betts <olly@survex.com>

	* php/smoketest.php: Check OP_ELITE_SET has the correct numerical
	  value.

Mon Sep 11 06:51:25 BST 2006  Olly Betts <olly@survex.com>

	* configure.ac: Fix broken sed command in previous checkin.

Fri Sep 08 03:27:36 BST 2006  Olly Betts <olly@survex.com>

	* configure.ac,tcl8/Makefile.am: For Tcl, remove any _svn6789 suffix
	  from the version number.

Tue Sep 05 21:14:33 BST 2006  Olly Betts <olly@survex.com>

	* configure.ac: Need to AC_SUBST(PYTHON_CXXFLAGS) so that we really
	  add "-fno-strict-aliasing" when compiling the python bindings with
	  g++.

Thu Aug 31 20:27:42 BST 2006  Olly Betts <olly@survex.com>

	* tcl8/Makefile.am,tcl8/run-tcl-test: Fix to work in VPATH build.

Thu Aug 24 18:31:42 BST 2006  Olly Betts <olly@survex.com>

	* tcl8/smoketest.tcl: Add check that xapian::Query_OP_ELITE_SET has
	  the right value.

Thu Aug 24 18:03:47 BST 2006  Olly Betts <olly@survex.com>

	* tcl8/: Rework how the smoketest gets run to eliminate special code
	  for using uninstalled bindings from smoketest.tcl itself.  This
	  allows the smoketest to be run using install bindings, and also
	  make the smoketest a better example program.

Fri Jun 09 04:10:18 BST 2006  Olly Betts <olly@survex.com>

	* configure.ac: We need to look for jni.h in
	  /usr/lib/jvm/java-gcj/include on some Debian and Ubuntu boxes at
	  least.

Fri Jun 09 00:23:46 BST 2006  Olly Betts <olly@survex.com>

	* xapian.i: Add actual begin_transaction prototype.

Mon May 29 11:19:32 BST 2006  Olly Betts <olly@survex.com>

	* php/Makefile.am: Distribute smoketest4.php and smoketest5.php.

Thu May 25 08:09:15 BST 2006  Olly Betts <olly@survex.com>

	* php/smoketest5.php: Fix syntax of catch.

Sat May 20 19:27:27 BST 2006  Olly Betts <olly@survex.com>

	* TODO: Add 2 entries for smoketest.rb.

Sat May 20 18:09:32 BST 2006  Olly Betts <olly@survex.com>

	* php/: Now that we're throwing PHP exceptions with PHP5 we need